--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title></title>
   </head>
   <body>
+    <div class="row">
+      <div class="column"></div>
+
+    </div>
+    <div class="score"></div>
+      
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
     <script src="javascript/app.js"></script>
   </body>
 </html>
